[project]
name = "metaspread"
version = "2024.0.1"
authors = [
  { name="Alfredo Hernández-Inostroza", email="alfredo.hernandez@ug.uchile.cl" },
]
description = "A cancer and metastasis simulation package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Matplotlib",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "matplotlib==3.8.0",
  "Mesa==2.1.2",
  "numpy==1.26.0",
  "pandas==2.1.1",
  "pynput==1.7.6",
  "opencv_python==4.8.1.78"
]
[project.urls]
Homepage = "https://github.com/fredih/MetaSpread"
Issues = "https://github.com/fredih/MetaSpread/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "metaspread/*.py",
  "LICENSE.txt",
  "README.md",
  "requirements.txt",
]